<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_note_tv"
        android:text="@string/add_note"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_note_et"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="14sp"
        android:hint="@string/add_your_note_here"
        android:background="@color/white"
        android:layout_below="@id/dialog_note_tv">

        <requestFocus/>
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_below="@id/dialog_note_et">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/dialog_note_cancelBtn"
            android:background="@drawable/dlg_btn_bg"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:textColor="@color/green_006400"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addNote"
            android:id="@+id/dialog_note_addBtn"
            android:background="@drawable/main_recordbtn_bg"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"/>



    </LinearLayout>



</RelativeLayout>