<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f3f3f3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/item_mainlv_top_totalExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_expense"/>

        <TextView
            android:id="@+id/item_mainlv_top_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$ 0"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="26sp"
            android:layout_below="@id/item_mainlv_top_totalExpense"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/item_mainlv_top_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_visibility_black_24dp"
            android:layout_alignTop="@id/item_mainlv_top_money"/>

        <TextView
            android:id="@+id/item_mainlv_top_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_income"
            android:layout_below="@id/item_mainlv_top_money"/>

        <TextView
            android:id="@+id/item_mainlv_top_incomeMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_below="@id/item_mainlv_top_money"
            android:layout_toRightOf="@id/item_mainlv_top_income"
            android:text="$ 0"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/item_mainlv_top_budgetMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$ 0"
            android:textColor="@color/black"
            android:layout_alignBottom="@id/item_mainlv_top_budget"
            android:layout_toRightOf="@id/item_mainlv_top_budget"
            android:layout_marginLeft="5dp"
            android:inputType="number"/>

        <TextView
            android:id="@+id/item_mainlv_top_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_income"
            android:layout_marginTop="10dp"
            android:text="@string/monthly_budget" />

        <TextView
            android:id="@+id/item_mainlv_top_chartTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_budget"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@mipmap/graph"
            android:text="@string/view_graph_analysis"
            android:textColor="@color/green_006400"
            android:gravity="center_vertical"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/item_mainlv_top_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Today's Expense $0 Income $0"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>


</LinearLayout>