<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GraphActivity"
    android:orientation="vertical"
    android:background="@color/grey_f3f3f3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/graph_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/graph_calendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:src="@mipmap/calendar"
            android:layout_alignParentRight="true"
            android:onClick="onClick"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/graph_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="November 2020 bill"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/graph_tv_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total 5 spend records: $500"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/graph_tv_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total 2 income records: $500"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
        <Button
            android:id="@+id/graph_expense_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/expense"
            android:background="@drawable/main_recordbtn_bg"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="onClick"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/graph_income_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/income"
            android:background="@drawable/dlg_btn_bg"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onClick"
            android:layout_marginLeft="10dp"/>



    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/graph_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>